--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -10,6 +10,13 @@
     .profile-info { 
         padding: 0 20px;
     }
+ 
+
+
+
+
+
+
 
 }
 
@@ -42,6 +49,43 @@
         width: 260px;
         padding-left: 0px;
         padding-right: 45px;
+    }
+
+    .hero-area {
+        margin-top: 30px;
+    }
+    .hero-item { 
+        height: 400px; 
+    }
+    .hr-contents { 
+        margin-top: 0;
+    }
+    .inf-btns button span {
+        padding: 10px 10px;
+        margin-right: 4px;
+    }
+    .inf-btns button.extmenu:after { 
+        left: 17px; 
+    }
+    .binfo .b-nms h4 { 
+        font-size: 26px; 
+    }
+    .binfo .b-nms {
+        width: 45%; 
+        padding: 30px 22px;
+    }
+    .binfo .act-infos {
+        width: 30%; 
+        padding-left: 30px;
+    }
+    .b-aboutinfo .abinfo-wrp {
+        width: 65%; 
+    }
+    .b-aboutinfo ul {
+        width: 30%; 
+    }
+    .b-aboutinfo .abinfo-wrp:after { 
+        width: 250px; 
     }
 
 
@@ -161,4 +205,156 @@
         margin-top: 20px;
     }
  
+
+    
+    .hero-area {
+        margin-top: 30px;
+    }
+    .hero-item { 
+        height: 240px; 
+    }
+    .hr-contents {
+        margin-top: 0;
+        width: 100%;
+        padding: 0 20px;
+    }
+    .inf-btns button span {
+        padding: 10px 10px;
+        margin-right: 4px;
+    }
+    .inf-btns button.extmenu:after { 
+        left: 17px; 
+    }
+    .binfo .b-nms h4 { 
+        font-size: 20px; 
+    }
+    .binfo .b-nms h4 small {
+        font-size: 14px;
+    }
+    .binfo .b-nms {
+        width: 100%;
+        border: none;
+        border-top: 1px solid #000;
+        border-bottom: 1px solid #000;
+        padding: 20px 0;
+        margin-top: 30px;
+    }
+    .binfo .act-infos {
+        width: 30%; 
+        padding-left: 30px;
+    }
+    .b-aboutinfo .abinfo-wrp {
+        width: 100%;
+        margin-top: 20px;
+    }
+    .b-aboutinfo ul {
+        width: 100%; 
+    }
+    .b-aboutinfo .abinfo-wrp:after { 
+        width: 200px; 
+    }
+    .abinfo-coms h4 .nice-select { 
+        margin-left: 20px; 
+    }
+    .comments-blk { 
+        flex-wrap: wrap;
+    }
+    .cm-arrows { 
+        margin-top: 20px;
+    }
+    .product-detailse-area form button {
+        padding: 10px 50px; 
+    }
+    .product-detailse-area form .labels textarea { 
+        height: 100px; 
+    }
+    .inf-btns { 
+        flex-wrap: wrap;
+    }
+    .inf-btns button { 
+        width: 140px; 
+        margin-top: 10px;
+    }
+    .binfo {
+        flex-wrap: wrap;
+        padding-top: 30px;
+        padding-bottom: 20px;
+    }
+    .binfo .img {
+        width: 100%;
+        text-align: center;
+    } 
+    .binfo .img img {
+        width: 100px;
+    }  
+    .binfo .act-infos {
+        width: 100%;
+    }
+    .hr-contents h2 { 
+        font-size: 28px;
+    }
+    .hr-contents p { 
+        font-size: 18px; 
+        margin-top: 5px;
+    }
+    .hero-all-items .owl-prev,.hero-all-items .owl-next { 
+        top: 76%; 
+    }
+    .binfo img.infoTitleImg {
+        top: -15px;
+        width: 200px;
+    }
+    .binfo .b-nms ul {
+        margin-bottom: 20px;
+        margin-top: 15px;
+    }
+    .binfo .b-nms ul li { 
+        font-size: 15px;
+        margin-right: 3px; 
+    }
+    .binfo .act-infos ul li {
+        font-size: 16px; 
+        margin: 15px 0;
+    }
+    .b-aboutinfo{
+        flex-wrap: wrap;
+    }
+    .prof-wrps img { 
+        width: 100px;
+    }
+    .prof-wrps span {
+        padding: 15px 60px; 
+        font-size: 20px; 
+        margin-top: 17px;
+    }
+    .prof-wrps {
+        height: 300px; 
+    }
+    .pods ul { 
+        flex-wrap: wrap; 
+    }
+    .pods ul li {
+        width: 129px;  
+        margin-top: 10px;
+    }
+    .pods ul li a {
+        font-size: 16px;
+        padding: 5px 5px;
+    }
+    .pods ul li a.gvotes .cm-arrows button {
+        margin-left: 15px;
+        font-size: 14px; 
+        padding: 0px 5px;
+        margin-top: -25px;
+    }
+    .category-area { 
+        padding-bottom: 80px;
+    }
+
+
+
+
+
+
+
 } 
