--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -194,7 +194,7 @@ body {
     top: 100px;
     background: #DDE1E8;
     z-index: 2;
-    width: 90%;
+    width: 1240px;
     transform: translateX(-50%);
     padding: 20px;
     border-radius: 0 0 10px 10px;
@@ -238,6 +238,13 @@ body {
   
 
 /* Normal screen :992px. */
+@media (min-width: 1201px) and (max-width: 1500px) {
+  .mega-menu{
+    width: 1024px;
+  }
+
+}
+/* Normal screen :992px. */
 @media (min-width: 992px) and (max-width: 1200px) {
  
     .menu-area nav ul li a{
@@ -246,7 +253,9 @@ body {
     .mega-menu ul { 
         width: 150px; 
     }
-  
+    .mega-menu{
+      width: 970px;
+    }
 
 }  
 
